# meshlet

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  meshlet-server.service
crates/meshlet-cli/: Cargo.toml  README.md
crates/meshlet-cli/src/: args.rs  editor.rs  import_export.rs  main.rs
crates/meshlet-cli/src/snapshots/: meshlet__import_export__tests__snapshot_json_output_with_redaction.snap  meshlet_cli__import_export__tests__snapshot_markdown_export.snap  meshlet_cli__tests__snapshot_display_output.snap  meshlet_cli__tests__snapshot_display_output_minimal.snap
crates/meshlet-core/: Cargo.toml  README.md
crates/meshlet-core/src/: doc.rs  error.rs  fetch.rs  lib.rs  model.rs  reconcile.rs  search.rs  store.rs
crates/meshlet-core/tests/: sync_integration.rs
crates/meshlet-proto/: Cargo.toml  README.md
crates/meshlet-proto/src/: messages.rs
crates/meshlet-server/: Cargo.toml  README.md
crates/meshlet-server/src/: doc.rs  lib.rs  main.rs  transport.rs
crates/meshlet-server/tests/: sync_e2e.rs
