[package]
name = "meshlet-cli"
description = "CLI bookmark manager with CRDT sync (buku-like, local-first)"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["cli", "bookmarks", "crdt", "sync", "buku"]
categories = ["command-line-utilities"]

[dependencies]
meshlet-core.workspace = true
meshlet-proto.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
tempfile = "3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
webbrowser = "1"
scraper = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
serde_json = "1"
loro = "1"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }