[package]
name = "meshlet-core"
version.workspace = true
edition.workspace = true

[dependencies]
loro = "1"
ulid = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
regex = "1"
url = "2"

[dev-dependencies]
tempfile = "3"