[package]
name = "meshlet-core"
description = "Core library for meshlet: CRDT bookmark storage, SQLite mirror, and web fetcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["crdt", "loro", "bookmarks", "sqlite"]
categories = ["database", "data-structures"]

[dependencies]
loro = "1"
ulid = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
regex = "1"
url = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.20"

[dev-dependencies]
tempfile = "3"