[package]
name = "meshlet-proto"
description = "Sync wire types for meshlet: SyncRequest/SyncResponse with Loro CRDT update encoding"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["crdt", "sync", "loro", "protocol"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loro = "1"
base64 = "0.22"