[package]
name = "meshlet-server"
version.workspace = true
edition.workspace = true

[dependencies]
meshlet-core = { path = "../meshlet-core" }
meshlet-proto = { path = "../meshlet-proto" }
loro = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"