[package]
name = "meshlet-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "meshlet-server"
path = "src/main.rs"

[dependencies]
meshlet-core = { path = "../meshlet-core" }
meshlet-proto = { path = "../meshlet-proto" }
loro = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }