[package]
name = "meshlet-server"
description = "Sync relay server for meshlet: CRDT peer that stores and forwards bookmark updates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["crdt", "sync", "server", "bookmarks", "loro"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "meshlet-server"
path = "src/main.rs"

[dependencies]
meshlet-core.workspace = true
meshlet-proto.workspace = true
loro = "1"
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }